--- a/app/apps/release_notes/templates/beheer/release_note_list.html
+++ b/app/apps/release_notes/templates/beheer/release_note_list.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="container__flex">
-            <h1>Release notes overzicht</h1>
+            <h1>Berichten overzicht</h1>
             <a class="btn btn-action btn-240"
                href="{% url 'release_note_aanmaken' %}"
                data-turbo="false">
@@ -35,7 +35,7 @@
                      xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M17 6H15V15H6V17H15V26H17V17H26V15H17V6Z" fill="#ffffff"></path>
                 </svg>
-                Nieuwe release note
+                Nieuwe bericht
             </a>
         </div>
         <form>
@@ -50,7 +50,6 @@
                 </div>
             </div>
         </form>
-        <h2>Release Notes</h2>
         <table>
             <thead>
                 <tr>
