--- a/app/apps/release_notes/templates/public/notificaties/notificatie_lijst.html
+++ b/app/apps/release_notes/templates/public/notificaties/notificatie_lijst.html
@@ -3,7 +3,7 @@
     <div class="container__notification container__notification--snack"
          data-controller="notificatielijst">
         {% for object in snack %}
-            <turbo-frame class="notification {{ object.notificatie_niveau }}" data-notificatielijst-target="notificatie" scr="{% url 'notificatie_verwijderen_public' object.id %}" id="notificatie_{{ object.id }}">
+            <turbo-frame class="notification {{ object.notificatie_niveau }}" data-notificatielijst-target="notificatie" data-src="{% url 'notificatie_verwijderen_public' object.id %}" id="notificatie_{{ object.id }}">
             {% include "public/notificaties/notificatie.html" with titel=object.titel niveau=object.notificatie_niveau has_beschrijving=object.has_beschrijving korte_beschrijving=object.korte_beschrijving beschrijving=object.beschrijving only %}
             </turbo-frame>
         {% endfor %}
@@ -11,14 +11,15 @@
     <div class="container__notification container__notification--toast"
          data-controller="notificatielijst">
         {% for object in toast %}
-            <turbo-frame class="notification {{ object.notificatie_niveau }}" data-notificatielijst-target="notificatie">
+            <turbo-frame class="notification {{ object.notificatie_niveau }}" data-notificatielijst-target="notificatie" data-src="{% url 'notificatie_verwijderen_public' object.id %}" id="notificatie_{{ object.id }}">
             {% include "public/notificaties/notificatie.html" with titel=object.titel niveau=object.notificatie_niveau has_beschrijving=object.has_beschrijving korte_beschrijving=object.korte_beschrijving beschrijving=object.beschrijving only %}
             </turbo-frame>
         {% endfor %}
         {% for message in messages %}
-            <turbo-frame class="notification {{ message.tags }}" data-notificatielijst-target="notificatie">
-            {% include "public/notificaties/notificatie.html" with titel=message niveau=message.tags tags=message.level only %}
-            </turbo-frame>
+            <div class="notification {{ message.tags }}"
+                 data-notificatielijst-target="notificatie">
+                {% include "public/notificaties/notificatie.html" with titel=message niveau=message.tags tags=message.level only %}
+            </div>
         {% endfor %}
     </div>
 {% endif %}
