Styling and timing toasts

--- a/app/apps/release_notes/templates/public/notificaties/notificatie.html
+++ b/app/apps/release_notes/templates/public/notificaties/notificatie.html
@@ -15,4 +15,4 @@
 <button type="button"
         class="btn-close--small"
         aria-label="Sluit"
-        data-action="notificatielijst#hideNotification">{% include "icons/close.svg" %}</button>
+        data-action="notificatie#hideNotification">{% include "icons/close.svg" %}</button>
