--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -140,8 +140,8 @@
 
 .container__meldingnavigatie {
     position: absolute;
-    top: 16px;
-    right: 0;
+    top: -35px;
+    left: 1em;
     display: flex;
     justify-content: flex-end;
     gap: 8px;
