--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -48,6 +48,8 @@
                     left: auto;
                     padding: 0;
                     box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.25);
+                    transition: all 0.01s ease;
+                    transition-delay: 0.5s;
 
                     &:before {
                         content: "";
