--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -42,13 +42,14 @@
 
                 .legenda {
                     display: block;
-                    top: -100%;
-                    transform: translateY(-200%);
+                    top: 35px;
+                    transform: translateY(0);
                     right: -5px;
                     left: auto;
                     padding: 0;
                     box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.25);
                     opacity: 0;
+                    pointer-events: none;
                     transition: opacity $transition-duration-default $transition-ease-default;
                     transition-delay: 0.15s;
 
@@ -77,9 +78,9 @@
                 &:hover,
                 &:focus-within {
                     .legenda {
-                        top: 35px;
-                        transform: translateY(0);
                         opacity: 1;
+                        pointer-events: all;
+                        transition: opacity $transition-duration-default $transition-ease-default;
                     }
                 }
             }
