--- a/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
@@ -41,16 +41,20 @@
                         <div class="form-control__with-helptext js-validation">{{ form.bericht_type|render_rotterdam_formulier }}</div>
                         <div class="form-control__with-helptext js-validation"
                              data-berichten-beheer-target="notificatie hideable">
-                            {{ form.notificatie_type|render_rotterdam_formulier }}
-                        </div>
-                        <div class="form-control__with-helptext js-validation"
-                             data-berichten-beheer-target="notificatie hideable">
                             {{ form.notificatie_niveau|render_rotterdam_formulier }}
                         </div>
                         <div class="form-control__with-helptext js-validation">{{ form.titel|render_rotterdam_formulier }}</div>
                         <div class="form-control__with-helptext js-validation"
                              data-berichten-beheer-target="notificatie hideable">
                             {{ form.korte_beschrijving|render_rotterdam_formulier }}
+                        </div>
+                        <div class="form-control__with-helptext js-validation"
+                             data-berichten-beheer-target="notificatie hideable">
+                            {{ form.link_titel|render_rotterdam_formulier }}
+                        </div>
+                        <div class="form-control__with-helptext js-validation"
+                             data-berichten-beheer-target="notificatie hideable">
+                            {{ form.link_url|render_rotterdam_formulier }}
                         </div>
                         <div class="form-control__with-helptext js-validation"
                              data-testid="text_editor">{{ form.beschrijving }}</div>
