Adding and styling Link url

--- a/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
@@ -55,6 +55,7 @@
                             {{ form.link_url|render_rotterdam_formulier }}
                         </div>
                         <div class="form-control__with-helptext js-validation padding-bottom-2x"
+                             data-berichten-beheer-target="releaseNote hideable"
                              data-testid="text_editor">{{ form.beschrijving }}</div>
                         <div class="form-control__with-helptext js-validation full-width"
                              data-controller="bijlagen"
