--- a/app/apps/release_notes/templates/public/notificaties/notificatie.html
+++ b/app/apps/release_notes/templates/public/notificaties/notificatie.html
@@ -8,10 +8,13 @@
 <div class="container__content">
     <h3>{{ titel }}</h3>
     <div class="container__message">
+        {% if link_titel and link_url %}
+            <div class="container__link">
+                <a href="{{ link_url }}">{{ link_titel }}</a>
+            </div>
+        {% endif %}
         {% if korte_beschrijving %}<p data-notificatie-target="content">{{ korte_beschrijving }}</p>{% endif %}
-        {% if has_beschrijving %}<a href="">Meer info</a>{% endif %}
     </div>
-    {% if link_titel and link_url %}<a href="{{ link_url }}">{{ link_titel }}</a>{% endif %}
 </div>
 <button type="button"
         class="btn-close--small"
