--- a/app/apps/beheer/templates/beheer/beheer.html
+++ b/app/apps/beheer/templates/beheer/beheer.html
@@ -28,7 +28,7 @@
                data-turbo-frame="_top">Standaard teksten</a>
         </li>
         <li>
-            <a href="{% url 'release_note_lijst' %}" data-turbo-frame="_top">Release notes</a>
+            <a href="{% url 'release_note_lijst' %}" data-turbo-frame="_top">Berichten</a>
         </li>
     </ul>
     <h2>Andere Forzamor beheer {{ APP_ENV }} omgevingen</h2>
