--- a/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
@@ -3,7 +3,7 @@
 {% load json_encode from main_tags %}
 {% load static %}
 {% block title %}
-    Release note wijzigen | PlanR
+    Bericht wijzigen | PlanR
 {% endblock title %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
