--- a/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
@@ -3,7 +3,7 @@
 {% load json_encode from main_tags %}
 {% load static %}
 {% block title %}
-    Release note aanmaken | PlanR
+    Bericht aanmaken | PlanR
 {% endblock title %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
@@ -19,10 +19,10 @@
                      xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.15173 1.73256L7.73753 0.318359L1.44704 6.60885L1.4142 6.576L0 7.9902L1.4115 9.4017L1.37867 9.43453L7.67186 15.7277L9.08606 14.3135L3.7726 9.00006H24.0098V7.00006H3.88423L9.15173 1.73256Z" fill="#404B4F" />
                 </svg>
-                Release Notes
+                Berichten
             </a>
         </div>
-        <h1>Release note aanmaken</h1>
+        <h1>Bericht aanmaken</h1>
         <div class="grid-container">
             <div class="grid-item">
                 <form action="."
