--- a/app/apps/main/templates/home.html
+++ b/app/apps/main/templates/home.html
@@ -18,11 +18,10 @@
                 <div class="grid-item">
                     <section class="section--seperated">
                         {% if not request.user.is_authenticated %}
-                            <a href="{% url 'melding_lijst' %}"
+                            <a href="{% url 'login' %}"
                                class="btn btn-action"
                                target="_top"
                                data-turbo="false">Log in</a>
-                            <a href="{% url 'login' %}" data-turbo="false">LOGIN</a>
                         {% else %}
                             {% if perms.authorisatie.beheer_bekijken %}
                                 <a href="{% url 'beheer' %}"
