--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -72,6 +72,10 @@
     @media (min-width: map-get($grid-breakpoints, lg)) {
         top: 90px;
     }
+
+    .show-modal & {
+        opacity: 0;
+    }
 }
 .container__notification {
     width: 98%;
@@ -117,7 +121,6 @@
         &.init {
             opacity: 1;
             max-height: 100vh;
-            overflow: auto;
             padding-top: 0.75em;
             padding-bottom: 0.75em;
             display: flex;
@@ -146,6 +149,7 @@
                 }
             }
             .container__content {
+                flex: 1;
                 .container__message {
                     display: block;
 
