notification bar show errors

--- a/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
@@ -30,8 +30,7 @@
                       id="releaseNoteForm"
                       enctype="multipart/form-data"
                       data-controller="berichten-beheer"
-                      class="form--aanpassen"
-                      data-turbo-frame="_top">
+                      class="form--aanpassen">
                     {% csrf_token %}
                     {{ form.management_form }}
                     {{ form.media }}
