--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -62,7 +62,7 @@
             <input type="datetime-local"
                    id="{{ field.auto_id }}"
                    name="{{ field.html_name }}"
-                   value="{% if field.value %}{{ field.value|date:'c' }}{% endif %}"
+                   value="{% if field.value and not field.value|date:'c' %}{{ field.value }}{% elif field.value %}{{ field.value|date:'c' }}{% endif %}"
                    class="form-control {% if field.errors %}is-invalid{% endif %}"
                    {% render_attrs field %}
                    {% if field.field.required %}required{% endif %}>
