--- a/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
@@ -36,6 +36,12 @@
                     {{ form.errors }}
                     <fieldset>
                         <div class="form-control__with-helptext js-validation">{{ form.bericht_type|render_rotterdam_formulier }}</div>
+                        <div data-berichten-beheer-target="releaseNote hideable">
+                            <div class="alert alert--info">
+                                <span>{% include "icons/info.svg" %}</span>
+                                <div class="info">Release notes worden vanaf de publicatie datum 5 weken lang getoond.</div>
+                            </div>
+                        </div>
                         <div class="form-control__with-helptext js-validation"
                              data-berichten-beheer-target="notificatie hideable">
                             {{ form.notificatie_niveau|render_rotterdam_formulier }}
