--- a/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanpassen.html
@@ -1,6 +1,7 @@
 {% extends "base_beheer.html" %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from main_tags %}
+{% load add_seconds_to_datetime from date_tags %}
 {% load static %}
 {% block title %}
     Bericht wijzigen | PlanR
@@ -38,6 +39,15 @@
                     {{ formset.media }}
                     <fieldset>
                         <div class="form-control__with-helptext js-validation">{{ form.bericht_type|render_rotterdam_formulier }}</div>
+                        <div data-berichten-beheer-target="releaseNote hideable">
+                            <div class="alert alert--info">
+                                <span>{% include "icons/info.svg" %}</span>
+                                <div class="info">
+                                    {% add_seconds_to_datetime form.publicatie_datum.value 604800 as published_to %}
+                                    Deze release note wordt tot {{ published_to }} getoond.
+                                </div>
+                            </div>
+                        </div>
                         <div class="form-control__with-helptext js-validation"
                              data-berichten-beheer-target="notificatie hideable">
                             {{ form.notificatie_niveau|render_rotterdam_formulier }}
