--- a/app/apps/release_notes/templates/public/notificaties/profiel_notificatie_lijst.html
+++ b/app/apps/release_notes/templates/public/notificaties/profiel_notificatie_lijst.html
@@ -1,7 +1,7 @@
 <turbo-frame id="tf_profiel_notificatie_lijst">
-<div>
-    <span>Aantal notificaties: {{ object_list|length }}</span>
-    <ul id="profiel_notificatie_lijst" class="list-notificaties">
+<div style="position: fixed; z-index: 9999; right: 0; top: 0;">
+    <span>Aantal notifcaties: {{ object_list|length }}</span>
+    <ul id="profiel_notificatie_lijst">
         {% for object in object_list %}
             {% include "public/notificaties/profiel_notificatie.html" with notificatie=object only %}
         {% endfor %}
