--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -13,6 +13,7 @@
 @import "./components/incident-details";
 @import "./components/spinner";
 @import "./components/alert";
+@import "./components/notifications";
 @import "./components/pagination";
 @import "./components/badges";
 @import "./components/details-summary";
