--- a/app/frontend/assets/styles/components/_pageHeader.scss
+++ b/app/frontend/assets/styles/components/_pageHeader.scss
@@ -21,16 +21,15 @@
         }
 
         .container__user {
-            padding: 1em 1.2em;
+            padding: 1em 0.5em 1em 1.2em;
 
             .container__uitklapper {
-                white-space: nowrap;
                 > span {
                     font-weight: 700;
                     text-decoration: none;
                     color: $black;
                     font-size: 0.8em;
-                    padding: 0.7em 0 1em 1em;
+                    padding: 0.7em 0.5em 2em 0.5em;
                     cursor: pointer;
 
                     svg {
@@ -40,18 +39,25 @@
                     }
                 }
 
-                .legenda {
+                .content {
+                    position: absolute;
                     display: block;
-                    top: 35px;
+                    top: 2.2em;
                     transform: translateY(0);
                     right: -5px;
-                    left: auto;
                     padding: 0;
                     box-shadow: 0 4px 10px 1px rgba(0, 0, 0, 0.25);
                     opacity: 0;
                     pointer-events: none;
                     transition: opacity $transition-duration-default $transition-ease-default;
                     transition-delay: 0.15s;
+                    background-color: $white;
+
+                    &--large {
+                        padding: 1em;
+                        width: 98vw;
+                        max-width: 400px;
+                    }
 
                     &:before {
                         content: "";
@@ -63,10 +69,13 @@
                         transform: rotate(0deg);
                         position: absolute;
                         top: -10px;
-                        left: 50%;
+                        left: 85%;
                         transform: translateX(-50%);
                     }
 
+                    ul {
+                        margin: 0;
+                    }
                     li {
                         margin-bottom: 1px;
                     }
@@ -77,7 +86,7 @@
 
                 &:hover,
                 &:focus-within {
-                    .legenda {
+                    .content {
                         opacity: 1;
                         pointer-events: all;
                         transition: opacity $transition-duration-default $transition-ease-default;
@@ -93,4 +102,17 @@
             }
         }
     }
+}
+
+.initials {
+    display: inline-block;
+    width: 2.62em;
+    height: 2.62em;
+    background-color: $blue-200;
+    color: $blue-900;
+    text-align: center;
+    border-radius: 100%;
+    line-height: 2.62em;
+    font-size: 0.85em;
+    text-transform: uppercase;
 }
