--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -33,8 +33,13 @@ $red-200: #fcf0f0;
 $red-400: #ffd5d5;
 $blue-100: #f7f9fa;
 $blue-200: #eaeef1;
-$blue-900: #244048;
+$blue-900: #104ccb;
 $gray-600: #7f838a;
+
+$neutral-900: #244048;
+$neutral-600: #bfd2d9;
+$neutral-200: #eaeef1;
+$neutral-100: #f7f9fa;
 
 // magentatinten
 $magenta-tint01: #c93675;
