--- a/app/apps/release_notes/templates/public/notificaties/profiel_notificatie.html
+++ b/app/apps/release_notes/templates/public/notificaties/profiel_notificatie.html
@@ -10,7 +10,7 @@
             <h2>{{ notificatie.titel }}</h2>
             {% if notificatie.korte_beschrijving %}<p>{{ notificatie.korte_beschrijving }}</p>{% endif %}
             {% if notificatie_is_watched %}
-                <span>{% include "icons/info.html" %}</span>
+                <span>{% include "icons/info.svg" %}</span>
             {% endif %}
         </div>
     </li>
