--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -190,6 +190,13 @@
     &--snack {
         max-width: 714px;
         z-index: 2000;
+
+        &.busy {
+            pointer-events: none !important;
+            * {
+                pointer-events: none !important;
+            }
+        }
     }
 
     &--toast {
