--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -17,6 +17,8 @@ $green-tint01: #00811f;
 $green-tint02: #006e32;
 $green-tint03: #006e32;
 $green-tint04: #ebf5ed;
+$green-100: #f9fcfa;
+$green-200: #ebf5ed;
 $green-400: #cfdbd5;
 $green-600: #e3f4dd;
 
